2015-02-13  Steve Ellcey  <sellcey@imgtec.com>

	* sysdeps/mips/bits/endian.h (__MIPSEB): Use #ifdef instead of #if.
	* sysdeps/mips/memcpy.S (__MIPSEB): Ditto.
	* sysdeps/mips/memset.S (__MIPSEB): Ditto.

2015-02-13  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/generic/c++-types.data: New file.
	* sysdeps/generic/ld.abilist: New file.
	* sysdeps/generic/libBrokenLocale.abilist: New file.
	* sysdeps/generic/libanl.abilist: New file.
	* sysdeps/generic/libc.abilist: New file.
	* sysdeps/generic/libcrypt.abilist: New file.
	* sysdeps/generic/libdl.abilist: New file.
	* sysdeps/generic/libm.abilist: New file.
	* sysdeps/generic/libpthread.abilist: New file.
	* sysdeps/generic/libresolv.abilist: New file.
	* sysdeps/generic/librt.abilist: New file.

2015-02-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17569]
	* sysdeps/ieee754/dbl-64/wordsize-64/s_remquo.c (__remquo):
	Compute absolute value of x as modified by fmod, not original
	value of x.
	* math/libm-test.inc (RUN_TEST_ffI_f1): Rename to
	RUN_TEST_ffI_f1_mod8.  Check extra return value mod 8.
	(RUN_TEST_LOOP_ffI_f1): Rename to RUN_TEST_LOOP_ffI_f1_mod8.  Call
	RUN_TEST_ffI_f1_mod8.
	(remquo_test_data): Add more tests.

2015-02-13  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/init_array/pt-crti.S: New file.

2015-02-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17967]
	* sysdeps/powerpc/fpu/e_sqrtf.c (__slow_ieee754_sqrtf): Use
	__builtin_fmaf instead of relying on contraction of a * b + c.

2015-02-12  J William Piggott  <elseifthen@gmx.com>

	[BZ #17969]
	* manual/time.texi: correct the zoneinfo path in the TZ Variable
	node.

2015-02-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17964]
	* sysdeps/powerpc/fpu/e_sqrt.c (__slow_ieee754_sqrt): Use
	__builtin_fma instead of relying on contraction of a * b + c.

2015-02-12  Roland McGrath  <roland@hack.frob.com>

	* Makeconfig (ASFLAGS): Add -Werror=undef.
	* sysdeps/arm/Versions (libc: GLIBC_2.19): New (empty) version set.