@@ -9,8 +9,8 @@ Version 2.22
 
 * The following bugs are resolved with this release:
 
-  4719, 15467, 15790, 16560, 17569, 17912, 17932, 17944, 17949, 17964,
-  17965, 17967, 17969.
+  4719, 15467, 15790, 16560, 17569, 17792, 17912, 17932, 17944, 17949,
+  17964, 17965, 17967, 17969.
 
 Version 2.21
 
